# av-beginner

./: CMakeLists.txt  README.md  main.cpp
cmake_utils/: CMakeLists.txt
resource/video/: video-yuv420p-512x512.yuv
sdl_tutorial/: CMakeLists.txt
sdl_tutorial/sdl_01_create_and_show_window/: CMakeLists.txt  sdl_create_and_show_window.cpp
sdl_tutorial/sdl_02_load_image_and_display/: CMakeLists.txt  sdl_load_image_and_display.cpp
sound_touch_tutorial/: CMakeLists.txt
sound_touch_tutorial/sound_touch_01_init/: CMakeLists.txt  sound_touch_init.cpp
